--- a/web/index_en.html
+++ b/web/index_en.html
@@ -87,7 +87,7 @@
 	</div>
 	<footer class="clearfix">
 		<p class="pull-left">Created by <a href="https://opendatacity.de/">OpenDataCity</a>. The application is licensed under <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.</p>
-		<p class="pull-right">This page is analyzed with Google Analytics. <a href="https://opendatacity.de/impressum/" target="_blank">Imprint</a></p>
+		<p class="pull-right"><a href="https://opendatacity.de/impressum/" target="_blank">Imprint</a></p>
 	</footer>
 	<div id="share" class="overlay">
 		<h2>Embed</h2>
@@ -105,13 +105,5 @@
 		</p>
 	</div>
 	<div id="fb-root"></div>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-38022006-10', 'opendatacity.de');
-		ga('send', 'pageview');
-	</script>
 </body>
 </html>
