Update generated pages

--- a/web/index.html
+++ b/web/index.html
@@ -7,17 +7,17 @@
 
 	<meta name="og:title" property="og:title" content="Vorratsdatenspeicherung in der Schweiz">
 	<meta name="og:type" property="og:type" content="article">
-	<meta name="og:url" property="og:url" content="http://apps.opendatacity.de/vds/">
-	<meta name="og:image" property="og:image" content="http://apps.opendatacity.de/vds/screenshot.png">
+	<meta name="og:url" property="og:url" content="https://digitale-gesellschaft.ch/vds/">
+	<meta name="og:image" property="og:image" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
 	<meta name="og:description" property="og:description" content="Der grüne Nationalrat Balthasar Glättli hat einen Teil seiner Vorratsdaten aus sechs Monaten für diese Visualisierung zur Verfügung gestellt. Im Ergebnis ergeben diese Vorratsdaten das, was Geheimdienste und Strafverfolgungsbehörden als Profil bezeichnen – ein umfassendes Bild über das gesamte Leben der überwachten Person.">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="Vorratsdatenspeicherung in der Schweiz">
 	<meta name="twitter:description" property="twitter:description" content="Visualiert: Vorratsdatenspeicherung in der Schweiz">
-	<meta name="twitter:image:src" property="twitter:image:src" content="http://apps.opendatacity.de/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="Der grüne Nationalrat Balthasar Glättli hat einen Teil seiner Vorratsdaten aus sechs Monaten für diese Visualisierung zur Verfügung gestellt. Im Ergebnis ergeben diese Vorratsdaten das, was Geheimdienste und Strafverfolgungsbehörden als Profil bezeichnen – ein umfassendes Bild über das gesamte Leben der überwachten Person.">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Andere Sprachen: <a href="index_en.html">English</a>, <b>Deutsch</b>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Andere Sprachen: <a href="index_en.html">English</a>, <b>Deutsch</b>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Vorratsdaten&shy;speicherung in der Schweiz</h1>
 			<p>Das überwachte Leben von Nationalrat Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Weitere Links:</strong>
 				<ul>
-					<li>Der vollständige Code befindet sich auf GitHub: <a href="https://github.com/opendatacity/vds-suisse/">github.com/opendatacity/vds-suisse</a>.</li>
+					<li>Der vollständige Code befindet sich auf Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
 					<li>Hochauflösende Grafik des <a href="download/calendar.png">Kalenders</a>.</li>
 					<li>Hochauflösende Grafik des <a href="download/network_4096.png">sozialen Netzwerks</a>.</li>
-					<li>Hilf uns dabei, die Visualisierung in andere Sprachen zu übersetzen: <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">github.com/opendatacity/vds-suisse/.../languages</a>.</li>
+					<li>Hilf uns dabei, die Visualisierung in andere Sprachen zu übersetzen: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
@@ -94,10 +94,10 @@
 		<p>
 			Diese Browser-App steht unter <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">CC-BY-Lizenz</a> und darf gerne in Blogs und anderen Medien eingebettet werden:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;http://apps.opendatacity.de/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot von &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot von &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			Für Profis: Zusätzlich lässt sich durch einen an die URL angehängten Hash-Parameter der vorausgewählte Tab definieren.<ul><li><code>#tab=calendar</code> Die <a href="http://apps.opendatacity.de/vds/frame_de.html#tab=calendar" target="_blank">Kalenderdarstellung</a> wird angezeigt.</li><li><code>#tab=social</code> Das <a href="http://apps.opendatacity.de/vds/frame_de.html#tab=social" target="_blank">Soziale Netzwerk</a> wird angezeigt.</li></ul>
+			Für Profis: Zusätzlich lässt sich durch einen an die URL angehängten Hash-Parameter der vorausgewählte Tab definieren.<ul><li><code>#tab=calendar</code> Die <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=calendar" target="_blank">Kalenderdarstellung</a> wird angezeigt.</li><li><code>#tab=social</code> Das <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=social" target="_blank">Soziale Netzwerk</a> wird angezeigt.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
