--- a/web/index_es.html
+++ b/web/index_es.html
@@ -7,17 +7,17 @@
 
 	<meta name="og:title" property="og:title" content="Retención de datos en Suiza">
 	<meta name="og:type" property="og:type" content="article">
-	<meta name="og:url" property="og:url" content="http://apps.opendatacity.de/vds/">
-	<meta name="og:image" property="og:image" content="http://apps.opendatacity.de/vds/screenshot.png">
+	<meta name="og:url" property="og:url" content="https://digitale-gesellschaft.ch/vds/">
+	<meta name="og:image" property="og:image" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
 	<meta name="og:description" property="og:description" content="Balthasar Glättli, miembro del Consejo Nacional del Partido Verde, ha proporcionado parte de sus datos retenidos durante seis meses para esta visualización. Como resultado, estos datos retenidos revelan lo que los servicios secretos y las fuerzas y cuerpos de seguridad llaman " perfil " - una imagen completa de toda la vida de la persona monitorizada.">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="Retención de datos en Suiza">
 	<meta name="twitter:description" property="twitter:description" content="Visualized: Retención de datos en Suiza">
-	<meta name="twitter:image:src" property="twitter:image:src" content="http://apps.opendatacity.de/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="Balthasar Glättli, miembro del Consejo Nacional del Partido Verde, ha proporcionado parte de sus datos retenidos durante seis meses para esta visualización. Como resultado, estos datos retenidos revelan lo que los servicios secretos y las fuerzas y cuerpos de seguridad llaman " perfil " - una imagen completa de toda la vida de la persona monitorizada.">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Otros idiomas: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <b>Español</b>, <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Otros idiomas: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <b>Español</b>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Retención de datos en Suiza</h1>
 			<p>La vida monitorizada del consejero nacional Balthasar Glättli.</p>
@@ -77,7 +77,7 @@
 			<p>
 				<strong>Más enlaces:</strong>
 				<ul>
-					<li>El código completo está en GitHub: <a href="https://github.com/opendatoscity/vds-suisse/">github.com/opendatoscity/vds-suisse</a>.</li>
+					<li>El código completo está en Xiala: <a href="https://github.com/opendatoscity/vds-suisse/">github.com/opendatoscity/vds-suisse</a>.</li>
 					<li>Gráfico alta resolution del <a href="download/calendar.png">calendario</a>.</li>
 					<li>Gráfico alta resolution de la <a href="download/network_4096.png">red social</a>.</li>
 					<li>Ayúdanos a traducir esta aplicación en otros idiomas: <a href="https://github.com/opendatoscity/vds-suisse/tree/master/generator/languages">github.com/opendatoscity/vds-suisse/.../languages</a>.</li>
@@ -94,7 +94,7 @@
 		<p>
 			Esta aplicación está disponible bajo <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">licencia CC-BY</a> y puede ser integrada en blogs y otros medios de comunicación:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;http://apps.opendatacity.de/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Para usuarios/as avanzadas: Se puede definir una pestaña pre-seleccionada añadiendo un parámetro a la dirección web <ul><li><code>#tab=calendar</code> Para mostrar la <a href="http://apps.opendatoscity.de/vds/frame_en.html#tab=calendar" target="_blank">vista calendario</a>.</li><li><code>#tab=social</code> Para mostrar la <a href="http://apps.opendatoscity.de/vds/frame_en.html#tab=social" target="_blank">red social</a>.</li></ul>
