--- a/web/index_fr.html
+++ b/web/index_fr.html
@@ -7,17 +7,17 @@
 
 	<meta name="og:title" property="og:title" content="Conservation des données personnelles en Suisse">
 	<meta name="og:type" property="og:type" content="article">
-	<meta name="og:url" property="og:url" content="http://apps.opendatacity.de/vds/">
-	<meta name="og:image" property="og:image" content="http://apps.opendatacity.de/vds/screenshot.png">
+	<meta name="og:url" property="og:url" content="https://digitale-gesellschaft.ch/vds/">
+	<meta name="og:image" property="og:image" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
 	<meta name="og:description" property="og:description" content="Balthasar Glättli, conseiller national du groupe des Verts, a mis à disposition une partie des données collectées pendant 6 mois pour cette visualisation. Le résultat est ce que les services secrets et les autorités pénales appellent un "profil" - une image complète de la vie d'une personne sous surveillance.">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="Conservation des données personnelles en Suisse">
 	<meta name="twitter:description" property="twitter:description" content="Visualisation: conservation des données personnelles en Suisse">
-	<meta name="twitter:image:src" property="twitter:image:src" content="http://apps.opendatacity.de/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="Balthasar Glättli, conseiller national du groupe des Verts, a mis à disposition une partie des données collectées pendant 6 mois pour cette visualisation. Le résultat est ce que les services secrets et les autorités pénales appellent un "profil" - une image complète de la vie d'une personne sous surveillance.">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Autres langues: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <b>Français</b>, <a href="index_es.html">Español</a>, <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Autres langues: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <b>Français</b>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Conservation des données personnelles en Suisse</h1>
 			<p>La vie sous surveillance du conseiller national Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Plus de liens:</strong>
 				<ul>
-					<li>Le code source complet est sur GitHub: <a href="https://github.com/opendatacity/vds-suisse/">github.com/opendatacity/vds-suisse</a>.</li>
+					<li>Le code source complet est sur Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
 					<li>Graphique haute résolution du <a href="download/calendar.png">calendrier</a>.</li>
 					<li>Graphique haute résolution du <a href="download/network_4096.png">réseau social</a>.</li>
-					<li>Aidez-nous à traduire cette application dans d'autres langues: <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">github.com/opendatacity/vds-suisse/.../languages</a>.</li>
+					<li>Aidez-nous à traduire cette application dans d'autres langues: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
@@ -94,10 +94,10 @@
 		<p>
 			Cette application est mise à disposition sous licence <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;http://apps.opendatacity.de/vds/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href="http://apps.opendatacity.de/vds/frame_en.html#tab=calendar" target="_blank">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href="http://apps.opendatacity.de/vds/frame_en.html#tab=social" target="_blank">réseau social</a> sera affiché.</li></ul>
+			Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar" target="_blank">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social" target="_blank">réseau social</a> sera affiché.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
