--- a/web/index_ws.html
+++ b/web/index_ws.html
@@ -7,17 +7,17 @@
 
 	<meta name="og:title" property="og:title" content="">
 	<meta name="og:type" property="og:type" content="article">
-	<meta name="og:url" property="og:url" content="http://apps.opendatacity.de/vds/">
-	<meta name="og:image" property="og:image" content="http://apps.opendatacity.de/vds/screenshot.png">
+	<meta name="og:url" property="og:url" content="https://digitale-gesellschaft.ch/vds/">
+	<meta name="og:image" property="og:image" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
 	<meta name="og:description" property="og:description" content="">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="">
 	<meta name="twitter:description" property="twitter:description" content="">
-	<meta name="twitter:image:src" property="twitter:image:src" content="http://apps.opendatacity.de/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1></h1>
 			<p></p>
@@ -94,7 +94,7 @@
 		<p>
 			
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;http://apps.opendatacity.de/vds/frame_ws.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt; &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_ws.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt; &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			
