--- a/web/index_en.html
+++ b/web/index_en.html
@@ -7,17 +7,17 @@
 
 	<meta name="og:title" property="og:title" content="Data retention in Switzerland">
 	<meta name="og:type" property="og:type" content="article">
-	<meta name="og:url" property="og:url" content="http://apps.opendatacity.de/vds/">
-	<meta name="og:image" property="og:image" content="http://apps.opendatacity.de/vds/screenshot.png">
+	<meta name="og:url" property="og:url" content="https://digitale-gesellschaft.ch/vds/">
+	<meta name="og:image" property="og:image" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
 	<meta name="og:description" property="og:description" content="Balthasar Glättli, member of the National Council for The Green Party, has provided parts of his retained data of six months for this visualization. As a result, these retained data reveal what secret services and law inforcement call "profile" - a comprehensive picture of the entire life of the monitored person.">
 
 	<meta name="twitter:card" property="twitter:card" content="summary">
-	<meta name="twitter:site" property="twitter:site" content="@opendatacity">
+	<meta name="twitter:site" property="twitter:site" content="@digiges_ch">
 	<meta name="twitter:creator" property="twitter:creator" content="@opendatacity">
 	<meta name="twitter:title" property="twitter:title" content="Data retention in Switzerland">
 	<meta name="twitter:description" property="twitter:description" content="Visualized: Data retention in Switzerland">
-	<meta name="twitter:image:src" property="twitter:image:src" content="http://apps.opendatacity.de/vds/screenshot.png">
-	<meta name="twitter:domain" property="twitter:domain" content="opendatacity.de">
+	<meta name="twitter:image:src" property="twitter:image:src" content="https://digitale-gesellschaft.ch/vds/screenshot.png">
+	<meta name="twitter:domain" property="twitter:domain" content="digitale-gesellschaft.ch">
 
 	<meta name="description" content="Balthasar Glättli, member of the National Council for The Green Party, has provided parts of his retained data of six months for this visualization. As a result, these retained data reveal what secret services and law inforcement call "profile" - a comprehensive picture of the entire life of the monitored person.">
 	<meta name="author" content="Michael Kreil, OpenDataCity">
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Other languages: <b>English</b>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Other languages: <b>English</b>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Data retention in Switzerland</h1>
 			<p>The monitored life of National Councilor Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Further links:</strong>
 				<ul>
-					<li>The complete code is on GitHub: <a href="https://github.com/opendatacity/vds-suisse/">github.com/opendatacity/vds-suisse</a>.</li>
+					<li>The complete code is on Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
 					<li>High resolution graphic of the <a href="download/calendar.png">calendar</a>.</li>
 					<li>High resolution graphic of the <a href="download/network_4096.png">social network</a>.</li>
-					<li>Help us to translate this app into other languages: <a href="https://github.com/opendatacity/vds-suisse/tree/master/generator/languages">github.com/opendatacity/vds-suisse/.../languages</a>.</li>
+					<li>Help us to translate this app into other languages: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
@@ -94,10 +94,10 @@
 		<p>
 			This application is licensed under <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">CC-BY license</a> and may be embedded in blogs and other media:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;http://apps.opendatacity.de/vds/frame_en.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Provided by &lt;a target=&quot;_blank&quot; href=&quot;http://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_en.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Provided by &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href="http://apps.opendatacity.de/vds/frame_en.html#tab=calendar" target="_blank">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href="http://apps.opendatacity.de/vds/frame_en.html#tab=social" target="_blank">social network</a> will be displayed.</li></ul>
+			For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar" target="_blank">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social" target="_blank">social network</a> will be displayed.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
