--- a/web/index.html
+++ b/web/index.html
@@ -94,7 +94,7 @@
 		<p>
 			Diese Browser-App steht unter <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">CC-BY-Lizenz</a> und darf gerne in Blogs und anderen Medien eingebettet werden:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot von &lt;a target=&quot;_blank&quot; href=&quot;https://opendatacity.de/&quot;&gt;OpenDataCity&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot von &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitale Gesellschaft&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Für Profis: Zusätzlich lässt sich durch einen an die URL angehängten Hash-Parameter der vorausgewählte Tab definieren.<ul><li><code>#tab=calendar</code> Die <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=calendar" target="_blank">Kalenderdarstellung</a> wird angezeigt.</li><li><code>#tab=social</code> Das <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=social" target="_blank">Soziale Netzwerk</a> wird angezeigt.</li></ul>
