Update generated pages

--- a/web/frame_fr.html
+++ b/web/frame_fr.html
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="footer">Créé par <a href="https://opendatacity.de/" target="_blank">OpenDataCity</a>. Source des données: <a href="http://www.digitale-gesellschaft.ch/cdp" target="_blank">digiges.ch</a>. L'application est sous licence <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC-BY 3.0</a>.</div>
+		<div id="footer">Créé par <a href="https://opendatacity.de/" target="_blank">OpenDataCity</a>. Source des données: <a href="https://www.digitale-gesellschaft.ch/cdp" target="_blank">digiges.ch</a>. L'application est sous licence <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC-BY 3.0</a>.</div>
 		<div style="display:none">
 			<img src="graphics/dot1.png">
 			<img src="graphics/dot2.png">
