--- a/web/index_es.html
+++ b/web/index_es.html
@@ -62,13 +62,13 @@
 		</div>
 		<div class="info">
 			<p>
-				<a href="http://www.balthasar-glaettli.ch/" target="_blank">Balthasar Glättli</a>, miembro del Consejo Nacional del Partido Verde en Suiza, ha contribuido <a href="https://opendatoscity.de">OpenDataCity</a> con parte de sus datos retenidos durante seis meses para esta visualización. Como resultado, estos datos retenidos revelan lo que los servicios secretos y fuerzas y cuerpos de seguridad llaman " perfil " - una imagen completa de toda la vida de la persona monitorizada.
+				<a href="https://www.balthasar-glaettli.ch/" target="_blank">Balthasar Glättli</a>, miembro del Consejo Nacional del Partido Verde en Suiza, ha contribuido <a href="https://opendatoscity.de">OpenDataCity</a> con parte de sus datos retenidos durante seis meses para esta visualización. Como resultado, estos datos retenidos revelan lo que los servicios secretos y fuerzas y cuerpos de seguridad llaman " perfil " - una imagen completa de toda la vida de la persona monitorizada.
 			</p>
 			<p>
 				Los visualización está basada en los mismos metadatos sobre teléfono y tráfico de correo electrónico que son grabados como parte de la retención de datos. Para más informacion visite los sitios web de nuestro socio del proyecto <a href="https://www.digitale-gesellschaft.ch/dr.html "target="_blank ">Sociedad Digital Suiza</a>.
 			</p>
 			<p>
-				Ofrecemos esta visualizazión bajo licencia <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>, por lo que todo el mundo (periódicos, blogs, etc.) puede integrar la aplicación y usar los gráficos libremente.
+				Ofrecemos esta visualizazión bajo licencia <a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>, por lo que todo el mundo (periódicos, blogs, etc.) puede integrar la aplicación y usar los gráficos libremente.
 			</p>
 			<p>
 				<strong>Datos y estadísticas adicionales:</strong><ul><li>Los datos retenidos sobre comunicaciones móviles y correo electrónico cubren un período de 6 meses <strong> </strong> (exactamente 179 días).</li><li> Durante este período se registró un total de <strong>7.112 entradas en la base de datos</strong> sobre el teléfono móvil. De éstas, 2610 entradas corresponden a conexiones a Internet (36,7%, 14,6 por día) 3.085 a SMS/MMS (43,4%, 17,2 por día) y 1.417 entradas corresponden a llamadas (19,9% , 7,9 por día)</li><li>Balthasar generó un total de 5.161.133.870 bytes (<strong>5.2 GB</strong> - 28,8 MB por día) de <strong>tráfico Internet</strong> con su teléfono móvil. De los cuales 979.745.187 bytes (980 MB - 5.5 MB por día) fueron subidas y 4.181.388.683 Bytes (4.2 GB - 23.4 MB por día) fueron descargas</li><li> Como la localización del teléfono móvil se detecta con cada llamada telefónica, cada mensaje de texto y cada conexión a Internet, podemos analizar <strong> el movimiento de Balthasar </strong>. Su velocidad máxima fue de 180 Km/h durante un viaje en tren el 04/09/2013 a las 15:15. En total, ha recorrido una distancia de por lo menos 16.000 Km durante los 6 meses. </li> <li> Los metadatos sobre correo electrónico se registran también como parte de la retención de datos. Durante 6 meses Balthasar ha recibido un total de <strong>14.638 correos electrónicos</strong> (82 por día) de alrededor de 6.500 personas. Él envió 1.654 correos electrónicos (9 por día) a 600 personas.</li></ul>
@@ -86,18 +86,18 @@
 		</div>
 	</div>
 	<footer class="clearfix">
-		<p class="pull-left">Creado por <a href="https://opendatoscity.de/">OpenDataCity</a>. Esta aplicación está disponible bajo licencia <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.</p>
+		<p class="pull-left">Creado por <a href="https://opendatoscity.de/">OpenDataCity</a>. Esta aplicación está disponible bajo licencia <a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.</p>
 		<p class="pull-right"><a href="https://opendatoscity.de/impressum/" target="_blank">Aviso legal</a></p>
 	</footer>
 	<div id="share" class="overlay">
 		<h2>Embed</h2>
 		<p>
-			Esta aplicación está disponible bajo <a target="_blank" href="http://creativecommons.org/licenses/by/3.0">licencia CC-BY</a> y puede ser integrada en blogs y otros medios de comunicación:
+			Esta aplicación está disponible bajo <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">licencia CC-BY</a> y puede ser integrada en blogs y otros medios de comunicación:
 		</p>
 		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitale Gesellschaft&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			Para usuarios/as avanzadas: Se puede definir una pestaña pre-seleccionada añadiendo un parámetro a la dirección web <ul><li><code>#tab=calendar</code> Para mostrar la <a href="http://apps.opendatoscity.de/vds/frame_en.html#tab=calendar" target="_blank">vista calendario</a>.</li><li><code>#tab=social</code> Para mostrar la <a href="http://apps.opendatoscity.de/vds/frame_en.html#tab=social" target="_blank">red social</a>.</li></ul>
+			Para usuarios/as avanzadas: Se puede definir una pestaña pre-seleccionada añadiendo un parámetro a la dirección web <ul><li><code>#tab=calendar</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=calendar" target="_blank">vista calendario</a>.</li><li><code>#tab=social</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=social" target="_blank">red social</a>.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
