--- a/web/frame_de.html
+++ b/web/frame_de.html
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="footer">Realisiert von <a href="https://opendatacity.de/" target="_blank">OpenDataCity</a>. Über die Datenquelle: <a href="http://www.digitale-gesellschaft.ch/vds" target="_blank">digiges.ch</a>. Anwendung steht unter <a href="http://creativecommons.org/licenses/by/3.0/de/" target="_blank">CC-BY 3.0</a>.</div>
+		<div id="footer">Realisiert von <a href="https://opendatacity.de/" target="_blank">OpenDataCity</a>. Über die Datenquelle: <a href="https://www.digitale-gesellschaft.ch/vds" target="_blank">digiges.ch</a>. Anwendung steht unter <a href="https://creativecommons.org/licenses/by/3.0/de/" target="_blank">CC-BY 3.0</a>.</div>
 		<div style="display:none">
 			<img src="graphics/dot1.png">
 			<img src="graphics/dot2.png">
