Update generated pages

--- a/web/index.html
+++ b/web/index.html
@@ -87,14 +87,13 @@
 	</div>
 	<footer class="clearfix">
 		<p class="pull-left">Realisiert von <a href="https://opendatacity.de/">OpenDataCity</a>. Anwendung steht unter <a rel="license" href="https://creativecommons.org/licenses/by/3.0/de/">CC-BY 3.0</a>.</p>
-		<p class="pull-right"><a href="https://opendatacity.de/impressum/" target="_blank">Impressum</a></p>
 	</footer>
 	<div id="share" class="overlay">
 		<h2>Einbetten</h2>
 		<p>
 			Diese Browser-App steht unter <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">CC-BY-Lizenz</a> und darf gerne in Blogs und anderen Medien eingebettet werden:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot von &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitale Gesellschaft&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_de.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Ein Informationsangebot der &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitalen Gesellschaft&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Für Profis: Zusätzlich lässt sich durch einen an die URL angehängten Hash-Parameter der vorausgewählte Tab definieren.<ul><li><code>#tab=calendar</code> Die <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=calendar" target="_blank">Kalenderdarstellung</a> wird angezeigt.</li><li><code>#tab=social</code> Das <a href="https://digitale-gesellschaft.ch/vds/frame_de.html#tab=social" target="_blank">Soziale Netzwerk</a> wird angezeigt.</li></ul>
