--- a/web/index_es.html
+++ b/web/index_es.html
@@ -87,14 +87,13 @@
 	</div>
 	<footer class="clearfix">
 		<p class="pull-left">Creado por <a href="https://opendatoscity.de/">OpenDataCity</a>. Esta aplicación está disponible bajo licencia <a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.</p>
-		<p class="pull-right"><a href="https://opendatoscity.de/impressum/" target="_blank">Aviso legal</a></p>
 	</footer>
 	<div id="share" class="overlay">
 		<h2>Embed</h2>
 		<p>
 			Esta aplicación está disponible bajo <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">licencia CC-BY</a> y puede ser integrada en blogs y otros medios de comunicación:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitale Gesellschaft&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Sociedad Digital Suiza&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Para usuarios/as avanzadas: Se puede definir una pestaña pre-seleccionada añadiendo un parámetro a la dirección web <ul><li><code>#tab=calendar</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=calendar" target="_blank">vista calendario</a>.</li><li><code>#tab=social</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=social" target="_blank">red social</a>.</li></ul>
