--- a/web/index_fr.html
+++ b/web/index_fr.html
@@ -87,14 +87,13 @@
 	</div>
 	<footer class="clearfix">
 		<p class="pull-left">Créé par <a href="https://opendatacity.de/">OpenDataCity</a>. L'application est mise à disposition sous licence <a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>.</p>
-		<p class="pull-right"><a href="https://opendatacity.de/impressum/" target="_blank">Impressum</a></p>
 	</footer>
 	<div id="share" class="overlay">
 		<h2>Intégrer</h2>
 		<p>
 			Cette application est mise à disposition sous licence <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digitale Gesellschaft&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Société numérique suisse&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar" target="_blank">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social" target="_blank">réseau social</a> sera affiché.</li></ul>
