--- a/web/index_en.html
+++ b/web/index_en.html
@@ -93,10 +93,10 @@
 		<p>
 			This application is licensed under <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">CC-BY license</a> and may be embedded in blogs and other media:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_en.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Provided by &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digital Society Switzerland&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds-suisse/frame_en.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Provided by &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Digital Society Switzerland&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar" target="_blank">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social" target="_blank">social network</a> will be displayed.</li></ul>
+			For advanced users: You can define a pre-selected tab by adding a hash parameter to the URL<ul><li><code>#tab=calendar</code> The <a href="https://digitale-gesellschaft.ch/vds-suisse/frame_en.html#tab=calendar" target="_blank">calendar view</a> will be displayed.</li><li><code>#tab=social</code> The <a href="https://digitale-gesellschaft.ch/vds-suisse/frame_en.html#tab=social" target="_blank">social network</a> will be displayed.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
