--- a/web/index_es.html
+++ b/web/index_es.html
@@ -93,7 +93,7 @@
 		<p>
 			Esta aplicación está disponible bajo <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">licencia CC-BY</a> y puede ser integrada en blogs y otros medios de comunicación:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Sociedad Digital Suiza&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds-suisse/frame_es.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Producido por &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Sociedad Digital Suiza&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
 			Para usuarios/as avanzadas: Se puede definir una pestaña pre-seleccionada añadiendo un parámetro a la dirección web <ul><li><code>#tab=calendar</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=calendar" target="_blank">vista calendario</a>.</li><li><code>#tab=social</code> Para mostrar la <a href="https://apps.opendatoscity.de/vds/frame_en.html#tab=social" target="_blank">red social</a>.</li></ul>
