--- a/web/index_fr.html
+++ b/web/index_fr.html
@@ -93,10 +93,10 @@
 		<p>
 			Cette application est mise à disposition sous licence <a target="_blank" href="https://creativecommons.org/licenses/by/3.0">CC-BY</a> et peut être intégrée à des blogs ou d'autres média:
 		</p>
-		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Société numérique suisse&lt;/a&gt;</code>
+		<code style="display:block;margin-bottom:10px;padding:10px;">&lt;iframe src=&quot;https://digitale-gesellschaft.ch/vds-suisse/frame_fr.html&quot; width=&quot;100%&quot; height=&quot;500&quot; scrolling=&quot;auto&quot; allowfullscreen frameborder=&quot;0&quot;&gt;&lt;/iframe&gt;&lt;br /&gt;Fourni par &lt;a target=&quot;_blank&quot; href=&quot;https://digitale-gesellschaft.ch/&quot;&gt;Société numérique suisse&lt;/a&gt;</code>
 		<p>&nbsp;</p>
 		<p>
-			Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=calendar" target="_blank">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href="https://digitale-gesellschaft.ch/vds/frame_en.html#tab=social" target="_blank">réseau social</a> sera affiché.</li></ul>
+			Pour les utilisateurs avancés: vous pouvez définir l'onglet préselectionné en ajoutant un paramètre à l'URL:<ul><li><code>#tab=calendar</code> La vue <a href="https://digitale-gesellschaft.ch/vds-suisse/frame_en.html#tab=calendar" target="_blank">calendrier</a> sera alors affichée.</li><li><code>#tab=social</code> Le <a href="https://digitale-gesellschaft.ch/vds-suisse/frame_en.html#tab=social" target="_blank">réseau social</a> sera affiché.</li></ul>
 		</p>
 		<p>&nbsp;</p>
 		<p>
