Change links from Xiala to Github

--- a/web/index_en.html
+++ b/web/index_en.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Other languages: <b>English</b>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Other languages: <b>English</b>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Data retention in Switzerland</h1>
 			<p>The monitored life of National Councilor Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Further links:</strong>
 				<ul>
-					<li>The complete code is on Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
+					<li>The complete code is on Github: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/">github.com/DigitaleGesellschaft/vds-suisse</a>.</li>
 					<li>High resolution graphic of the <a href="download/calendar.png">calendar</a>.</li>
 					<li>High resolution graphic of the <a href="download/network_4096.png">social network</a>.</li>
-					<li>Help us to translate this app into other languages: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
+					<li>Help us to translate this app into other languages: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">github.com/DigitaleGesellschaft/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
