--- a/web/index_es.html
+++ b/web/index_es.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Otros idiomas: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <b>Español</b>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Otros idiomas: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <a href="index_fr.html">Français</a>, <b>Español</b>, <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Retención de datos en Suiza</h1>
 			<p>La vida monitorizada del consejero nacional Balthasar Glättli.</p>
@@ -77,7 +77,7 @@
 			<p>
 				<strong>Más enlaces:</strong>
 				<ul>
-					<li>El código completo está en Xiala: <a href="https://github.com/opendatoscity/vds-suisse/">github.com/opendatoscity/vds-suisse</a>.</li>
+					<li>El código completo está en Github: <a href="https://github.com/opendatoscity/vds-suisse/">github.com/opendatoscity/vds-suisse</a>.</li>
 					<li>Gráfico alta resolution del <a href="download/calendar.png">calendario</a>.</li>
 					<li>Gráfico alta resolution de la <a href="download/network_4096.png">red social</a>.</li>
 					<li>Ayúdanos a traducir esta aplicación en otros idiomas: <a href="https://github.com/opendatoscity/vds-suisse/tree/master/generator/languages">github.com/opendatoscity/vds-suisse/.../languages</a>.</li>
