--- a/web/index.html
+++ b/web/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Andere Sprachen: <a href="index_en.html">English</a>, <b>Deutsch</b>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Andere Sprachen: <a href="index_en.html">English</a>, <b>Deutsch</b>, <a href="index_fr.html">Français</a>, <a href="index_es.html">Español</a>, <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Vorratsdaten&shy;speicherung in der Schweiz</h1>
 			<p>Das überwachte Leben von Nationalrat Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Weitere Links:</strong>
 				<ul>
-					<li>Der vollständige Code befindet sich auf Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
+					<li>Der vollständige Code befindet sich auf Github: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/">github.com/DigitaleGesellschaft/vds-suisse</a>.</li>
 					<li>Hochauflösende Grafik des <a href="download/calendar.png">Kalenders</a>.</li>
 					<li>Hochauflösende Grafik des <a href="download/network_4096.png">sozialen Netzwerks</a>.</li>
-					<li>Hilf uns dabei, die Visualisierung in andere Sprachen zu übersetzen: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
+					<li>Hilf uns dabei, die Visualisierung in andere Sprachen zu übersetzen: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">github.com/DigitaleGesellschaft/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
