--- a/web/index_fr.html
+++ b/web/index_fr.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 	<div id="container">
-		<div id="languages">Autres langues: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <b>Français</b>, <a href="index_es.html">Español</a>, <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">Other language</a></div>
+		<div id="languages">Autres langues: <a href="index_en.html">English</a>, <a href="index.html">Deutsch</a>, <b>Français</b>, <a href="index_es.html">Español</a>, <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">Other language</a></div>
 		<div class="jumbotron">
 			<h1>Conservation des données personnelles en Suisse</h1>
 			<p>La vie sous surveillance du conseiller national Balthasar Glättli.</p>
@@ -77,10 +77,10 @@
 			<p>
 				<strong>Plus de liens:</strong>
 				<ul>
-					<li>Le code source complet est sur Xiala: <a href="https://git.xiala.net/digiges/vds-suisse/">git.xiala.net/digiges/vds-suisse</a>.</li>
+					<li>Le code source complet est sur Github: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/">github.com/DigitaleGesellschaft/vds-suisse</a>.</li>
 					<li>Graphique haute résolution du <a href="download/calendar.png">calendrier</a>.</li>
 					<li>Graphique haute résolution du <a href="download/network_4096.png">réseau social</a>.</li>
-					<li>Aidez-nous à traduire cette application dans d'autres langues: <a href="https://git.xiala.net/digiges/vds-suisse/tree/master/generator/languages">git.xiala.net/digiges/vds-suisse/.../languages</a>.</li>
+					<li>Aidez-nous à traduire cette application dans d'autres langues: <a href="https://github.com/DigitaleGesellschaft/vds-suisse/tree/master/generator/languages">github.com/DigitaleGesellschaft/vds-suisse/.../languages</a>.</li>
 				</ul>
 			</p>
 		</div>
